# cohesion-ipc

./: .gitmodules  CMakeLists.txt  LICENSE
coipc/: argument_traits.h  cancellable_read.h  client_session.h  endpoint.h  endpoint_com.h  endpoint_sockets.h  endpoint_spawn.h  endpoint_stream.h  exceptions.h  misc.h  noncopyable.h  range.h  serialization.h  server_session.h  stream.h  types.h
coipc/com/: endpoint.h  init.h
coipc/spawn/: endpoint.h
coipc/strmd/: client_session.h  serialization.h  server_session.h  stream.h
src/: CMakeLists.txt  cancellable_read.unix.cpp  cancellable_read.win32.cpp  client_endpoint.cpp  client_endpoint_com.cpp  client_endpoint_sockets.cpp  client_endpoint_spawn.cpp  client_endpoint_spawn.unix.cpp  client_endpoint_spawn.win32.cpp  client_session.cpp  com_init.cpp  helpers.h  misc.cpp  server_endpoint.cpp  server_endpoint_com.cpp  server_endpoint_sockets.cpp  server_endpoint_sockets.h  server_endpoint_spawn.cpp  server_endpoint_stream.cpp  server_session.cpp  socket_helpers.h  socket_helpers.unix.cpp  socket_helpers.win32.cpp  stream.cpp
src/strmd/: client_session.cpp  server_session.cpp  stream.cpp
tests/: CMakeLists.txt  COMEndpointClientTests.cpp  COMEndpointServerTests.cpp  CancellableReadStressTests.cpp  CancellableReadTests.win32.cpp  ClientSessionTests.cpp  EndpointSelectorTests.cpp  ServerSessionContinuationTests.cpp  ServerSessionTests.cpp  SocketsEndpointClientTests.cpp  SocketsEndpointServerTests.cpp  SpawnEndpointClientTests.cpp  SpawnEndpointServerTests.cpp  StreamEndpointServerTests.cpp  StrmdClientSessionTests.cpp  StrmdServerSessionContinuationTests.cpp  StrmdServerSessionTests.cpp  constants.h  fake_read_primitives.cpp  fake_read_primitives.h  guinea_ipc_spawn.cpp  guinea_ipc_spawn_server.cpp  helpers.cpp  helpers.h  helpers_com.cpp  helpers_com.h  helpers_sockets.cpp  helpers_sockets.h  helpers_strmd.h  mock_queue.h  mocks.h  module.linux.cpp  module.macos.cpp  module.win32.cpp  path.cpp  path.h  test_constants.cpp
